# frankenjax

./: .agent-mail.yaml  .gitignore  AGENTS.md  COMPREHENSIVE_SPEC_FOR_FRANKENJAX_V1.md  Cargo.toml  EXHAUSTIVE_LEGACY_ANALYSIS.md  EXISTING_JAX_STRUCTURE.md  FEATURE_PARITY.md  PHASE2C_EXTRACTION_PACKET.md  PLAN_TO_PORT_JAX_TO_RUST.md  PROPOSED_ARCHITECTURE.md  README.md  TODO_SUPER_DETAILED_PORT_AND_PARITY.md
artifacts/ci/: README.md  coverage_raw_llvmcov.v1.json  coverage_report.v1.json  crash_report.v1.json  flake_quarantine_policy.md  flake_report.v1.json  github_actions_reliability_gates.example.yml  reliability_gate_report.v1.json
artifacts/durability/: dispatch_baseline_2026-02-13.decode-proof.json  dispatch_baseline_2026-02-13.scrub.json  dispatch_baseline_2026-02-13.sidecar.json  legacy_transform_cases.v1.decode-proof.json  legacy_transform_cases.v1.scrub.json  legacy_transform_cases.v1.sidecar.json
artifacts/e2e/: e2e_p2c001_full_dispatch_pipeline.e2e.json  e2e_p2c001_ir_determinism_under_replay.e2e.json  e2e_p2c001_large_jaxpr_stress.e2e.json  e2e_p2c001_strict_vs_hardened_mode_split.e2e.json  e2e_p2c001_trace_to_ir_roundtrip.e2e.json  e2e_p2c001_transform_order_enforcement.e2e.json  e2e_p2c001_transform_stack_composition.e2e.json  e2e_p2c001_vmap_rank2_tensor_support.e2e.json  e2e_p2c002_user_api_error_messages.e2e.json  e2e_p2c002_user_api_grad_polynomial.e2e.json  e2e_p2c002_user_api_jit_basic.e2e.json  e2e_p2c002_user_api_mode_and_backend_config.e2e.json  e2e_p2c002_user_api_stacking.e2e.json  e2e_p2c002_user_api_vmap_batch.e2e.json  e2e_p2c003_jit_constant_folding.e2e.json  e2e_p2c003_jit_mixed_known_unknown.e2e.json  e2e_p2c003_large_graph_staging.e2e.json  e2e_p2c003_nested_jit.e2e.json  e2e_p2c003_staging_residual_graph.e2e.json  e2e_p2c003_staging_roundtrip.e2e.json  e2e_p2c004_adversarial_dispatch_inputs.e2e.json  (+5 more)
crates/fj-api/: Cargo.toml
crates/fj-api/src/: errors.rs  lib.rs  transforms.rs
crates/fj-api/tests/: api_transform_suite.rs
crates/fj-ffi/: Cargo.toml
crates/fj-ffi/benches/: ffi_baseline.rs
crates/fj-ffi/src/: buffer.rs  callback.rs  lib.rs  marshal.rs
crates/fj-interpreters/: Cargo.toml
crates/fj-interpreters/benches/: pe_baseline.rs
crates/fj-interpreters/src/: lib.rs  partial_eval.rs  staging.rs
crates/fj-runtime/: Cargo.toml
crates/fj-runtime/src/: backend.rs  buffer.rs  device.rs  lib.rs
scripts/: enforce_quality_gates.sh  generate_run_manifest.sh
(+219 files in other folders)
