[package]
name = "fj-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FFI call interface for FrankenJAX — the ONLY crate permitted to use unsafe code"

[dependencies]
fj-core = { path = "../fj-core" }

[dev-dependencies]
fj-test-utils = { path = "../fj-test-utils" }
proptest = { workspace = true }
criterion = "0.8"

[[bench]]
name = "ffi_baseline"
harness = false
