[package]
name = "fj-interpreters"
version = "0.1.0"
edition = "2024"

[dependencies]
fj-core = { path = "../fj-core" }
fj-lax = { path = "../fj-lax" }
rustc-hash = { workspace = true }

[dev-dependencies]
fj-test-utils = { path = "../fj-test-utils" }
proptest = { workspace = true }
smallvec = { workspace = true }
