[package]
name = "fj-runtime"
version = "0.1.0"
edition = "2024"

[features]
default = []
asupersync-integration = ["dep:asupersync"]
frankentui-integration = ["dep:ftui"]

[dependencies]
fj-core = { path = "../fj-core" }
fj-ledger = { path = "../fj-ledger" }
asupersync = { version = "0.2.0", path = "/dp/asupersync", default-features = false, optional = true }
ftui = { version = "0.1.1", path = "/dp/frankentui/crates/ftui", default-features = false, optional = true }

[dev-dependencies]
fj-test-utils = { path = "../fj-test-utils" }
